--- a/app/src/main/res/layout/activity_janela_dois.xml
+++ b/app/src/main/res/layout/activity_janela_dois.xml
@@ -137,7 +137,7 @@
             android:layout_marginVertical="5dp">
 
             <ImageView
-                android:id="@+id/imageView"
+                android:id="@+id/ivImagem"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_gravity="center_horizontal"
