--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -162,7 +162,7 @@
                     android:text="@string/foto" />
 
                 <ImageView
-                    android:id="@+id/imageView"
+                    android:id="@+id/ivImagem"
                     android:layout_width="228dp"
                     android:layout_height="142dp"
                     android:layout_marginHorizontal="5dp"
