--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -120,7 +120,7 @@
                     android:text="@string/produtora" />
 
                 <EditText
-                    android:id="@+id/editTextTextPersonName3"
+                    android:id="@+id/etProdutora"
                     android:layout_width="wrap_content"
                     android:layout_height="50dp"
                     android:layout_marginHorizontal="5dp"
@@ -141,7 +141,7 @@
                     android:text="@string/lancamento" />
 
                 <EditText
-                    android:id="@+id/editTextTextPersonName4"
+                    android:id="@+id/etLancamento"
                     android:layout_width="wrap_content"
                     android:layout_height="50dp"
                     android:layout_marginHorizontal="5dp"
