--- a/app/src/main/res/values/array.xml
+++ b/app/src/main/res/values/array.xml
@@ -10,7 +10,7 @@
 
     <string-array name="plataforma">
         <item>PC</item>
-        <item>Playstatio 4</item>
+        <item>Playstation 4</item>
         <item>Xbox One</item>
         <item>Nintendo</item>
     </string-array>
