--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -89,18 +89,19 @@
                     android:text="@string/modos" />
 
                 <RadioGroup
+                    android:id="@+id/RadioGroup"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content">
 
                     <RadioButton
-                        android:id="@+id/radioButton"
+                        android:id="@+id/rbMultiplayer"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_weight="2"
                         android:text="@string/multiplayer" />
 
                     <RadioButton
-                        android:id="@+id/radioButton2"
+                        android:id="@+id/rbSingleplayer"
                         android:layout_height="wrap_content"
                         android:layout_marginEnd="60dp"
                         android:text="@string/singleplayer" />
@@ -176,30 +177,33 @@
             android:orientation="horizontal">
 
             <Button
-                android:id="@+id/button4"
+                android:id="@+id/btFechar"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginHorizontal="5dp"
                 android:layout_marginVertical="20dp"
                 android:layout_weight="1"
+                android:onClick="fechar"
                 android:text="@string/sair" />
 
             <Button
-                android:id="@+id/button5"
+                android:id="@+id/btLimpar"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginHorizontal="5dp"
                 android:layout_marginVertical="20dp"
                 android:layout_weight="1"
+                android:onClick="limpar"
                 android:text="@string/limpar" />
 
             <Button
-                android:id="@+id/button6"
+                android:id="@+id/btCadastrar"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginHorizontal="5dp"
                 android:layout_marginVertical="20dp"
                 android:layout_weight="1"
+                android:onClick="cadastrar"
                 android:text="@string/cadastrar" />
         </LinearLayout>
     </LinearLayout>
